--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,3 @@
-train_dataloader_options:
-  batch_size: 16
-  shuffle: True
-test_dataloader_options:
-  batch_size: 1
-  shuffle: False
-dataset:
-  path: "data/lfw"
+dataset_path: "data/lfw"
+epochs: 10
+learning_rate: 0.001
