--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,9 @@
-dataset_path: "data/lfw"
-epochs: 10
-learning_rate: 0.001
+segmentation:
+  experiment: 1
+  learning_rate: 0.0001
+  batch_size: 32
+  epochs: 10
+  load_model: false
+  dataset_path: "data/lfw"
+  save_model_path: "saved_models/model_id1.pt"
+  plots_path: "plots"
