--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,12 @@
 segmentation:
-  experiment: 1
+  experiment: 2
   learning_rate: 0.0001
   batch_size: 32
   epochs: 10
   load_model: false
   dataset_path: "data/lfw"
-  save_model_path: "saved_models/model_id1.pt"
+  save_model_path: "saved_models/model_id2.pt"
+  save_model_binaries_path: "saved_models/model_bin_id2.pt"
   plots_path: "plots"
+demo:
+  model_path: "../saved_models/model_bin_id2.pt"
