--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ scikit-learn~=1.3.2
 gradio~=4.12.0
 torch~=2.3.0.dev20231231+cu121
 tqdm~=4.66.1
+torchvision~=0.18.0.dev20231231+cu121
+python-dotenv~=1.0.0
