Updated the paths to be compatible with linux environments

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,8 @@
 segmentation:
   experiment: 1
-  batch_size: 32
-  dataset_path: "..\\data\\lfw"
+  dataset_path: "data/lfw"
   load_checkpoint: null
-  save_checkpoints_path: "..\\saved_models"
-  plots_path: "..\\plots"
+  save_checkpoints_path: "saved_models"
+  plots_path: "plots"
 demo:
-  model_path: "..\\saved_models\\model_bin_id1.pt"
+  model_path: "saved_models/some_model.pt"
